--- a/sections/about-me/index.mdx
+++ b/sections/about-me/index.mdx
@@ -7,5 +7,5 @@ image_credit: "https://unsplash.com/@kmkr"
 displayOrder: 1
 ---
 
-*** I didn't know what a code editor was *** when I wrote my first website; I used Microsoft TextPad. And the book I was following was 400 pages. And god help me if I made a typo. But inspite of this, by the last page I had the outlines of a travel website complete with sea turtles and a new passion in life. Fast forward several years, a Zoology degree, a
-Masters in Economics and a well-paying business career and I still found myself repeatedly returning to programming. Every night I would spend hours learning a new programming language, developing a new app, and picking apart my favorite sites. My love of coding began to find its way into my professional life in unexpected ways. At my first job after graduate school, I quickly developed a sharepoint site on company travel at a time when internal sites were novel. The site was a hit and I found myself looking for other ways to use my coding skills in each new position. But soon it wasnt enough for me and I found myself enrolled in the FullStack / California Polytechnic coding bootcamp. The bootcamp focused on how to learn: an essential skill in tech. Now is the time to import my education into action. I am excited to join the world of technology.
+*** I didn't know what a code editor was *** when I wrote my first website; I used Microsoft TextPad. And the book I was following was 400 pages. And heaven help me if I made a typo. But inspite of this, by the last page I had the outlines of a travel website complete with sea turtles and a new passion in life. Fast forward several years, a B.Sc. in Zoology, a
+Masters in Economics and a well-paying business career and I still found myself repeatedly returning to programming. Every night I would spend hours learning a new programming language, developing a new app, and picking apart my favorite sites. My love of coding began to find its way into my professional life in unexpected ways. At my first job after graduate school, I quickly developed a sharepoint site on company travel at a time when internal sites were novel. The site was a hit and I eagerly searched for other ways to use my coding skills in every new position. But soon it wasnt enough for me and I found myself enrolled in the FullStack / California Polytechnic coding bootcamp. The bootcamp focused on both the technical skills and, equally, how to learn on my own: an essential skill in tech. Now is the time to import my education into action. I am excited to join the world of technology.
