fixed typo in blog page

--- a/src/pages/blog/mdx-page.mdx
+++ b/src/pages/blog/mdx-page.mdx
@@ -80,7 +80,7 @@ frontmatter lets us access page medidata such as title, hero images, dates and m
             title
             alt
             date(formatString: "MMMM DD YYYY")
-            hero_image {
+            _image {
             childImageSharp {
                 gatsbyImageData
             }
