--- a/blog/mdx-webpage/index.mdx
+++ b/blog/mdx-webpage/index.mdx
@@ -94,7 +94,7 @@ frontmatter lets us access page medidata such as title, hero images, dates and m
             title
             alt
             date(formatString: "MMMM DD YYYY")
-            hero_image {
+            image {
             childImageSharp {
                 gatsbyImageData
             }
