Added article image to howtoquery

--- a/blog/howtoquery/index.mdx
+++ b/blog/howtoquery/index.mdx
@@ -2,8 +2,9 @@
 title: "Build a Gatsby webpage from MDX"
 subheader:  "Gatsby's ability to quickly generate pages from MDX is ideal for content-driven sites like blogs and tutorials."
 date: "2022-05-07"
-hero_image: "./brain_diagram_hero_forma.jpeg"
-alt: "Image of 2D brain with neon lights"
+hero_image: "./Coming_soon.jpeg"
+image_credit: "https://unsplash.com/@humakabakci"
+alt: "Image of the words coming soon"
 ---
 
 # Coming Soon! #
