Updated personal project template with video iframe

--- a/projects/news-app/index.mdx
+++ b/projects/news-app/index.mdx
@@ -1,3 +1,7 @@
 ---
-title: 
+title: "Build a Gatsby webpage from MDX"
+subheader:  "Gatsby's ability to quickly generate pages from MDX is ideal for content-driven sites like blogs and tutorials."
+date: "2022-05-07"
+hero_image: "./cake_fork.jpeg"
+alt: "Image of 2D brain with neon lights"
 ---
