--- a/sections/skills/index.mdx
+++ b/sections/skills/index.mdx
@@ -13,6 +13,8 @@ displayOrder: 1
 - Express
 
 - Django
+- MySql & PostgreSQL
+- NoSQL
 
 ### REACT Frameworks  
 - GatsbyJS   
@@ -26,6 +28,9 @@ Native OS development with React
 
 ### Languages and Front-end  
 - ReactJSX
+- Unity
+- Java
+- C#, C++
 
 - JavaScript
 
