Added new portfolio project

--- a/projects/news-app/index.mdx
+++ b/projects/news-app/index.mdx
@@ -1,7 +1,11 @@
 ---
-title: "Build a Gatsby webpage from MDX"
-subheader:  "Gatsby's ability to quickly generate pages from MDX is ideal for content-driven sites like blogs and tutorials."
-date: "2022-05-07"
-hero_image: "./cake_fork.jpeg"
-alt: "Image of 2D brain with neon lights"
+title: "C# Scripting in Unity: BUBBLE LAUNCHER! "
+subheader:  "A fun physics-based game based on the plastic cups games I grew up with"
+date: "2022-06-26"
+hero_image: "./BubbleLauncher.png"
+alt: "Underwater image with paddles and platforms"
+hero_image_credit_text: 'Original work by Sean Greene'
+hero_vid: 'https://www.youtube.com/embed/7OUDGFnRWG8'
 ---
+
+Play a working version of the game here: [Bubble Launcher- WebGL](https://play.unity.com/mg/other/webgl_build-111)
